updating gh-pages documentation

--- a/_static/guzzle.css
+++ b/_static/guzzle.css
@@ -50,10 +50,13 @@ h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: black;
-  font-weight: normal;
+  color: #111;
   padding: 0;
-  font-family: "Source Serif Pro", "serif";
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 300;
+  -webkit-text-size-adjust: 100%;
 }
 
 h1, h2, h3 {
@@ -416,10 +419,6 @@ div.footer {
   text-align: right;
   max-width: 1200px;
   width: 100%;
-}
-
-div.footer a {
-  color: #888;
 }
 
 /* -- relbar ---------------------------------------------------------------- */
