updating gh-pages documentation

--- a/_static/guzzle.css
+++ b/_static/guzzle.css
@@ -409,6 +409,12 @@ table.two-column {
   height: 40px;
 }
 
+/* github svg icon styling
+-------------------------------------------------- */
+svg.octicon-mark-github path {
+  fill: #888;
+}
+
 /* Footer styling
 -------------------------------------------------- */
 
